[tool.poetry]
name = "cp-envs"
version = "0.1.2"
description = ""
authors = ["YoheiHayamizu <hayamizu0111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
gymnasium = "^0.29.1"
pygame = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
